--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       border-top: 1px solid rgba(0,0,0,.08);
       background:
         linear-gradient(90deg, rgba(0,0,0,.62), rgba(0,0,0,.25) 55%, rgba(0,0,0,.55)),
-        url("assets/banner.png") center/cover no-repeat;
+        url("assets/banner.jpg") center/cover no-repeat;
       padding: 26px 20px 22px; /* less dead space */
     }
 
