--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
       padding: 22px 18px 54px;
     }
 
-    /* Top band */
+    /* Top band (NOW uses paper tile) */
     .top-band{
-      background: rgba(232,224,214,.92);
+      background:
+        url("assets/paper-tile.jpg") repeat,
+        rgba(232,224,214,.92);
+      background-size: 420px auto; /* tweak: 300 stronger / 600 softer */
       color: var(--ink);
       border-radius: 18px;
       border: 1px solid rgba(0,0,0,.08);
@@ -75,11 +78,13 @@
       justify-content:space-between;
       padding: 16px 18px;
       gap: 16px;
+      /* subtle “paper grain” lift without changing your layout */
+      background: linear-gradient(180deg, rgba(255,255,255,.20), rgba(255,255,255,0));
     }
 
     /* Logo smaller + controlled */
     .logo{
-      width: 88px;   /* smaller */
+      width: 88px;
       height: auto;
       flex: 0 0 auto;
       display:block;
@@ -89,7 +94,7 @@
     .top-copy{
       flex: 1 1 auto;
       text-align:center;
-      font-size: 34px;   /* bigger */
+      font-size: 34px;
       line-height: 1.15;
       letter-spacing: .2px;
       font-weight: 600;
@@ -108,8 +113,8 @@
       border-top: 1px solid rgba(0,0,0,.08);
       background:
         linear-gradient(90deg, rgba(0,0,0,.62), rgba(0,0,0,.25) 55%, rgba(0,0,0,.55)),
-        url("assets/banner.jpg") center/cover no-repeat;
-      padding: 26px 20px 22px; /* less dead space */
+        url("assets/banner.jpg") center/cover no-repeat; /* UPDATED to banner.jpg */
+      padding: 26px 20px 22px;
     }
 
     .hero-grid{
@@ -133,7 +138,6 @@
       text-shadow: 0 8px 24px rgba(0,0,0,.55);
     }
 
-    /* no period after this */
     .hero-h1 span{display:inline-block}
 
     .genres{
@@ -174,7 +178,7 @@
     .btn-primary:active{transform: translateY(1px)}
 
     .subline{
-      margin: 10px 0 0;      /* moved down a smidge */
+      margin: 10px 0 0;
       font-size: 20px;
       color: rgba(243,240,234,.92);
       text-shadow: 0 6px 18px rgba(0,0,0,.45);
@@ -200,7 +204,7 @@
 
     .airtable-embed{
       width: 100%;
-      height: 340px; /* adjust after you embed your form */
+      height: 340px;
       border: none;
       border-radius: 14px;
       overflow:hidden;
@@ -217,7 +221,10 @@
     .bottom{
       padding: 18px 18px 20px;
       text-align:center;
-      background: rgba(232,224,214,.92);
+      background:
+        url("assets/paper-tile.jpg") repeat,
+        rgba(232,224,214,.92);
+      background-size: 420px auto;
       color: var(--ink);
       border-top: 1px solid rgba(0,0,0,.08);
     }
@@ -324,8 +331,6 @@
           <aside class="card" aria-label="Join the mailing list form">
             <h2>Join the mailing list</h2>
 
-            <!-- Replace the src with your Airtable *embed* URL -->
-            <!-- In Airtable Form view: Share form → Embed this form → copy the URL -->
             <iframe
               class="airtable-embed"
               src="PASTE_YOUR_AIRTABLE_FORM_EMBED_URL_HERE"
