--- a/index.html
+++ b/index.html
@@ -6,120 +6,173 @@
   <title>Page Turner Book Club — Free Books</title>
   <meta name="description" content="Free books. Support authors. Fuel your next binge. Join Page Turner Book Club for weekly deals and author interviews." />
 
+  <!-- Typography closer to your mockup -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Cormorant+Garamond:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root{
-      --bg:#0b0f14;
-      --text:#f3f0ea;
-      --muted:#cfc6b8;
-      --paper:#e7e0d7;
+      --bg:#070a0f;
       --ink:#2b2620;
+
+      --cream:#f3efe7;
+      --paperTint: rgba(236,228,216,.92);
+
       --gold:#d9b25f;
       --gold2:#f0d28a;
+
       --red:#b3161b;
       --red2:#7f0f13;
-      --border:rgba(255,255,255,.14);
+
       --shadow: 0 18px 60px rgba(0,0,0,.55);
+      --shadowSoft: 0 10px 40px rgba(0,0,0,.25);
+
       --radius:18px;
-      --max: 1080px;
+      --max: 1120px;
+
+      --paperImg: url("assets/paper-tile.jpg");
     }
 
     *{box-sizing:border-box}
 
     body{
       margin:0;
-      font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
+      min-height:100vh;
+      font-family: "Cormorant Garamond", ui-serif, Georgia, "Times New Roman", Times, serif;
       background:
-        radial-gradient(1000px 600px at 20% 0%, rgba(217,178,95,.14), transparent 60%),
-        radial-gradient(900px 700px at 90% 30%, rgba(90,120,150,.10), transparent 60%),
+        radial-gradient(1100px 700px at 15% 0%, rgba(217,178,95,.18), transparent 62%),
+        radial-gradient(900px 700px at 85% 30%, rgba(90,120,150,.12), transparent 62%),
         var(--bg);
-      color: var(--text);
+      color: var(--cream);
+      display:flex;
+      justify-content:center;
     }
 
     .wrap{
+      width:100%;
       max-width: var(--max);
-      margin: 0 auto;
-      padding: 22px 18px 54px;
+      padding: 26px 18px 64px;
     }
 
+    /* ONE unified card */
+    .card-shell{
+      border-radius: var(--radius);
+      overflow:hidden;
+      box-shadow: var(--shadowSoft);
+      border: 1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.02);
+      margin: 0 auto;
+    }
+
+    /* Paper header (with texture) */
     .top-band{
-      background: rgba(232,224,214,.92);
+      position:relative;
       color: var(--ink);
-      border-radius: 18px;
-      border: 1px solid rgba(0,0,0,.08);
-      box-shadow: 0 10px 40px rgba(0,0,0,.25);
-      overflow: hidden;
+      background:
+        linear-gradient(180deg, rgba(255,255,255,.70), rgba(255,255,255,.55)),
+        var(--paperImg);
+      background-size: auto, 520px auto;
+      background-repeat: no-repeat, repeat;
+      padding: 14px 18px;
+    }
+
+    /* subtle paper edge shadow like your mockup */
+    .top-band::after{
+      content:"";
+      position:absolute;
+      left:0; right:0; bottom:-1px;
+      height:18px;
+      background: linear-gradient(180deg, rgba(0,0,0,.16), rgba(0,0,0,0));
+      opacity:.45;
+      pointer-events:none;
     }
 
     .top-inner{
-      display:flex;
+      display:grid;
+      grid-template-columns: 110px 1fr 110px;
       align-items:center;
-      justify-content:space-between;
-      padding: 16px 18px;
-      gap: 16px;
+      gap: 12px;
     }
 
     .logo{
-      width: 88px;
-      height: auto;
-      flex: 0 0 auto;
+      width: 92px;
+      height:auto;
       display:block;
+      justify-self:start;
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,.18));
     }
 
     .top-copy{
-      flex: 1 1 auto;
+      margin:0;
       text-align:center;
+      font-family: "Playfair Display", serif;
+      font-weight: 700;
       font-size: 34px;
       line-height: 1.15;
       letter-spacing: .2px;
-      font-weight: 600;
-      margin: 0;
+      color: rgba(43,38,32,.92);
+      text-shadow: 0 1px 0 rgba(255,255,255,.40);
     }
 
-    .top-spacer{
-      width: 88px;
-      flex: 0 0 auto;
-    }
+    .spacer{width:110px; height:1px}
 
-    /* Hero section (image background) */
+    /* HERO */
     .hero{
       position:relative;
-      border-top: 1px solid rgba(0,0,0,.08);
+
+      /* THIS is where banner.jpg is used */
       background:
-        /* LIGHTER overlay so banner stays visible */
-        linear-gradient(90deg, rgba(0,0,0,.35), rgba(0,0,0,.12) 55%, rgba(0,0,0,.28)),
+        linear-gradient(90deg, rgba(0,0,0,.48), rgba(0,0,0,.22) 55%, rgba(0,0,0,.42)),
         url("assets/banner.jpg") center/cover no-repeat;
-      padding: 26px 20px 22px;
+
+      padding: 30px 22px 26px;
+    }
+
+    /* soften edges so it sits into paper */
+    .hero::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        radial-gradient(900px 500px at 20% 30%, rgba(255,220,150,.10), transparent 60%),
+        radial-gradient(900px 600px at 80% 10%, rgba(140,170,200,.10), transparent 62%);
+      pointer-events:none;
+      mix-blend-mode: screen;
+      opacity:.65;
     }
 
     .hero-grid{
+      position:relative;
       display:grid;
-      grid-template-columns: 1.2fr .8fr;
+      grid-template-columns: 1.15fr .85fr;
       gap: 18px;
-      align-items: end;
-      min-height: 560px;
+      align-items:end;
+      min-height: 610px;
     }
 
     .hero-left{
-      padding: 6px 4px 0;
+      padding: 10px 6px 0;
     }
 
     .hero-h1{
-      margin: 0 0 6px;
-      font-size: 62px;
+      margin: 0 0 8px;
+      font-family:"Playfair Display", serif;
+      font-weight: 800;
+      font-size: 64px;
       line-height: 1.02;
-      font-weight: 700;
-      letter-spacing: .3px;
-      text-shadow: 0 8px 24px rgba(0,0,0,.55);
+      letter-spacing: .2px;
+      color: #f6ead2;
+      text-shadow: 0 10px 28px rgba(0,0,0,.62);
     }
-
-    .hero-h1 span{display:inline-block}
 
     .genres{
       margin: 0 0 18px;
-      font-size: 20px;
-      color: rgba(243,240,234,.9);
-      letter-spacing: .6px;
-      text-shadow: 0 6px 20px rgba(0,0,0,.45);
+      font-family:"Cormorant Garamond", serif;
+      font-size: 22px;
+      letter-spacing: .8px;
+      color: rgba(246,234,210,.92);
+      text-shadow: 0 8px 22px rgba(0,0,0,.52);
     }
 
     .cta{
@@ -129,149 +182,193 @@
       align-items:flex-start;
     }
 
+    /* Button closer to mockup: bevel + rim + glow */
     .btn-primary{
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      gap: 10px;
-      padding: 16px 18px;
+      padding: 16px 22px;
       border-radius: 999px;
-      color: #fff;
+      color:#fff;
       text-decoration:none;
+      font-family:"Playfair Display", serif;
       font-weight: 800;
-      letter-spacing: .6px;
+      font-size: 18px;
+      letter-spacing: .8px;
       text-transform: uppercase;
-      background: linear-gradient(180deg, var(--red), var(--red2));
-      border: 1px solid rgba(255,255,255,.18);
-      box-shadow: 0 16px 40px rgba(179,22,27,.30);
-      max-width: 620px;
-      width: fit-content;
+
+      background:
+        radial-gradient(120% 180% at 30% 10%, rgba(255,255,255,.26), transparent 55%),
+        linear-gradient(180deg, #c21b20, #7f0f13);
+
+      border: 1px solid rgba(255,255,255,.22);
+      box-shadow:
+        0 18px 46px rgba(179,22,27,.32),
+        inset 0 1px 0 rgba(255,255,255,.22),
+        inset 0 -10px 18px rgba(0,0,0,.22);
     }
 
     .btn-primary:hover{filter: brightness(1.06)}
     .btn-primary:active{transform: translateY(1px)}
 
     .subline{
-      margin: 10px 0 0;
+      margin: 6px 0 0;
       font-size: 20px;
-      color: rgba(243,240,234,.92);
-      text-shadow: 0 6px 18px rgba(0,0,0,.45);
+      color: rgba(246,234,210,.92);
+      text-shadow: 0 8px 20px rgba(0,0,0,.52);
     }
 
-    /* Form card */
-    .card{
-      background: rgba(15,16,18,.55);
-      border: 1px solid rgba(255,255,255,.14);
+    /* Form panel (glass) */
+    .form-panel{
+      position:relative;
       border-radius: 18px;
       box-shadow: var(--shadow);
+      overflow:hidden;
+
+      background:
+        linear-gradient(180deg, rgba(18,18,20,.62), rgba(12,12,14,.52));
+      border: 1px solid rgba(255,255,255,.16);
       backdrop-filter: blur(10px);
-      padding: 16px 16px 12px;
+      padding: 14px 14px 12px;
     }
 
-    .card h2{
+    .form-title{
       margin: 4px 0 10px;
+      font-family:"Playfair Display", serif;
       font-size: 34px;
-      font-weight: 700;
-      color: rgba(243,240,234,.95);
-      text-shadow: 0 6px 18px rgba(0,0,0,.35);
+      font-weight: 800;
+      color: rgba(246,234,210,.94);
+      text-shadow: 0 8px 18px rgba(0,0,0,.40);
     }
 
-    /* Airtable embed styling */
-    .airtable-embed{
-      width: 100%;
-      height: 380px; /* good desktop height; mobile increased below */
-      border: none;
+    /* Airtable container: no scroll, perfect fit */
+    .form-embed-wrap{
+      position:relative;
       border-radius: 14px;
       overflow:hidden;
-      background: rgba(255,255,255,.04);
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.05);
+    }
+
+    /* Visual “alignment” overlay (does NOT block clicks) */
+    .form-embed-wrap::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        radial-gradient(120% 120% at 30% 0%, rgba(255,220,150,.10), transparent 55%),
+        linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.10));
+      pointer-events:none; /* key: still clickable */
+      mix-blend-mode: multiply;
+      opacity:.75;
+    }
+
+    /* The iframe height MUST match your embed (533) so no scrolling */
+    .airtable-embed{
+      width: 100%;
+      height: 533px;
+      border: 0;
+      display:block;
+
+      /* Tone it down so it blends with the dark panel */
+      filter: brightness(.93) contrast(1.03) saturate(.90);
+      background: transparent;
     }
 
     .note{
       margin: 10px 0 0;
       font-size: 14px;
-      color: rgba(243,240,234,.78);
+      color: rgba(246,234,210,.80);
     }
 
+    /* Footer paper (with texture) */
     .bottom{
-      padding: 18px 18px 20px;
-      text-align:center;
-      background: rgba(232,224,214,.92);
       color: var(--ink);
+      text-align:center;
+      padding: 18px 18px 22px;
+
+      background:
+        linear-gradient(180deg, rgba(255,255,255,.68), rgba(255,255,255,.56)),
+        var(--paperImg);
+      background-size: auto, 520px auto;
+      background-repeat: no-repeat, repeat;
+
       border-top: 1px solid rgba(0,0,0,.08);
     }
 
     .quote{
-      margin: 0 0 14px;
+      margin: 0 0 12px;
+      font-family:"Cormorant Garamond", serif;
       font-size: 22px;
       font-style: italic;
+      color: rgba(43,38,32,.90);
     }
 
     .social-line{
-      margin: 0 0 10px;
+      margin: 0 0 12px;
+      font-family:"Playfair Display", serif;
       font-size: 18px;
       font-weight: 700;
-      letter-spacing: .5px;
+      letter-spacing: .6px;
       text-transform: uppercase;
+      color: rgba(43,38,32,.92);
     }
 
     .icons{
       display:flex;
       justify-content:center;
-      gap: 14px;
+      gap: 12px;
     }
 
-    .icon-btn{
-      width: 44px;
-      height: 44px;
-      border-radius: 14px;
-      display:grid;
-      place-items:center;
-      background: rgba(0,0,0,.08);
-      border: 1px solid rgba(0,0,0,.12);
-      text-decoration:none;
+    /* Use image icons (brand-colored). Put these files in assets if you want.
+       If you don’t, the fallback SVG block below still works. */
+    .icon-img{
+      width: 40px;
+      height: 40px;
+      display:block;
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,.18));
     }
 
-    .icon-btn:hover{background: rgba(0,0,0,.12)}
-
-    .icon{
-      width: 22px;
-      height: 22px;
-      fill: rgba(0,0,0,.75);
-    }
-
-    @media (max-width: 920px){
-      .top-copy{font-size: 28px}
+    /* Responsive */
+    @media (max-width: 980px){
+      .top-copy{font-size: 30px}
       .hero-grid{grid-template-columns: 1fr; min-height: unset}
-      .hero-h1{font-size: 54px}
-      .card{margin-top: 8px}
+      .hero-h1{font-size: 56px}
+      .form-panel{margin-top: 8px}
     }
 
-    @media (max-width: 520px){
-      .logo{width: 76px}
-      .top-spacer{width: 76px}
+    @media (max-width: 560px){
+      .top-inner{grid-template-columns: 92px 1fr 92px}
+      .logo{width: 78px}
       .top-copy{font-size: 24px}
+      .hero{padding: 22px 14px 20px}
       .hero-h1{font-size: 44px}
       .genres{font-size: 18px}
-      .btn-primary{width: 100%}
-      .airtable-embed{height: 520px} /* mobile needs more vertical room */
+      .btn-primary{width:100%}
+      .airtable-embed{height: 560px;} /* give a touch more on small screens */
     }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <section class="top-band">
-      <div class="top-inner">
-        <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
-        <p class="top-copy">Free books. Support authors.<br/>Fuel your next binge.</p>
-        <div class="top-spacer"></div>
-      </div>
+    <main class="card-shell">
 
-      <div class="hero">
+      <!-- HEADER (paper) -->
+      <header class="top-band">
+        <div class="top-inner">
+          <img class="logo" src="assets/logo.png" alt="Page Turner Book Club logo" />
+          <p class="top-copy">Free books. Support authors.<br/>Fuel your next binge.</p>
+          <div class="spacer" aria-hidden="true"></div>
+        </div>
+      </header>
+
+      <!-- HERO -->
+      <section class="hero">
         <div class="hero-grid">
 
           <div class="hero-left">
-            <h1 class="hero-h1"><span>Get Free Books</span></h1>
+            <h1 class="hero-h1">Get Free Books</h1>
             <p class="genres">Mystery ★ Thriller ★ Paranormal</p>
 
             <div class="cta">
@@ -289,44 +386,66 @@
             </div>
           </div>
 
-          <aside class="card" aria-label="Join the mailing list form">
-            <h2>Join the mailing list</h2>
+          <!-- FORM PANEL -->
+          <aside class="form-panel" aria-label="Join the mailing list form">
+            <div class="form-title">Join the mailing list</div>
 
-            <iframe
-              class="airtable-embed"
-              src="https://airtable.com/embed/apprQvd2jQf2hjdeK/shrbjWRI6bzsTaFVz"
-              title="Page Turner Book Club Mailing List"
-              loading="lazy"
-            ></iframe>
+            <div class="form-embed-wrap">
+              <!-- Your embed URL (no scrolling: height 533 matches) -->
+              <iframe
+                class="airtable-embed"
+                src="https://airtable.com/embed/apprQvd2jQf2hjdeK/shrbjWRI6bzsTaFVz"
+                title="Page Turner Book Club Mailing List"
+                loading="lazy"
+              ></iframe>
+            </div>
 
             <p class="note">No spam. Leave anytime.</p>
           </aside>
 
         </div>
-      </div>
+      </section>
 
-      <div class="bottom">
+      <!-- FOOTER (paper) -->
+      <footer class="bottom">
         <p class="quote">“Remember, your reviews are the only applause writers ever get.”</p>
         <p class="social-line">CLICK ICON TO FOLLOW for weekly deals:</p>
 
         <div class="icons">
-          <a class="icon-btn" href="PASTE_INSTAGRAM_URL_HERE" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/>
+          <!-- If you want brand-colored icons, add these files:
+               assets/instagram.png and assets/facebook.png
+               Then uncomment the <img> lines and delete the SVG ones. -->
+
+          <!--
+          <a href="PASTE_INSTAGRAM_URL_HERE" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+            <img class="icon-img" src="assets/instagram.png" alt="Instagram" />
+          </a>
+
+          <a href="PASTE_FACEBOOK_URL_HERE" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+            <img class="icon-img" src="assets/facebook.png" alt="Facebook" />
+          </a>
+          -->
+
+          <!-- Fallback (works now) -->
+          <a href="PASTE_INSTAGRAM_URL_HERE" target="_blank" rel="noopener noreferrer" aria-label="Instagram" style="text-decoration:none;">
+            <svg width="40" height="40" viewBox="0 0 24 24" aria-hidden="true" style="filter: drop-shadow(0 6px 10px rgba(0,0,0,.18));">
+              <path fill="rgba(43,38,32,.88)" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/>
             </svg>
           </a>
 
-          <a class="icon-btn" href="PASTE_FACEBOOK_URL_HERE" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.6c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12H17l-.4 3h-2.6v7A10 10 0 0 0 22 12z"/>
+          <a href="PASTE_FACEBOOK_URL_HERE" target="_blank" rel="noopener noreferrer" aria-label="Facebook" style="text-decoration:none;">
+            <svg width="40" height="40" viewBox="0 0 24 24" aria-hidden="true" style="filter: drop-shadow(0 6px 10px rgba(0,0,0,.18));">
+              <path fill="rgba(43,38,32,.88)" d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.6c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12H17l-.4 3h-2.6v7A10 10 0 0 0 22 12z"/>
             </svg>
           </a>
         </div>
-      </div>
-    </section>
+      </footer>
+
+    </main>
   </div>
 
   <script>
+    // Optional: Track primary CTA click (Meta Pixel)
     const freebiesBtn = document.getElementById("freebiesBtn");
     if (freebiesBtn) {
       freebiesBtn.addEventListener("click", () => {
