--- a/index.html
+++ b/index.html
@@ -7,217 +7,176 @@
 
 <style>
 :root{
-  --paper:#e8e1d8;
-  --ink:#2a241e;
-  --hero-dark: rgba(0,0,0,.55);
-  --red:#b21f23;
-  --red-dark:#7f1417;
-  --radius:20px;
+  --paper:#efe6d8;
+  --ink:#2b2620;
+  --red:#b3161b;
+  --red2:#7f0f13;
 }
 
-*{box-sizing:border-box;margin:0;padding:0}
+*{box-sizing:border-box}
 
 body{
-  font-family: Georgia, serif;
-  background:#0d1116;
-  display:flex;
-  justify-content:center;
-  padding:40px 16px;
+  margin:0;
+  font-family: Georgia, "Times New Roman", serif;
+  background:#0b0f14;
 }
 
-.container{
-  width:100%;
-  max-width:1080px;
-  border-radius:20px;
-  overflow:hidden;
+/* WRAPPER */
+.wrap{
+  max-width:1100px;
+  margin:40px auto;
   background:var(--paper);
-  box-shadow:0 40px 80px rgba(0,0,0,.6);
+  border-radius:18px;
+  overflow:hidden;
+  box-shadow:0 30px 80px rgba(0,0,0,.6);
 }
 
 /* HEADER */
-
-.header{
-  background:var(--paper);
-  padding:28px 40px;
+.top-inner{
   display:flex;
   align-items:center;
   justify-content:center;
+  padding:20px;
   position:relative;
 }
 
 .logo{
+  width:130px; /* 50% larger */
   position:absolute;
-  left:40px;
-  width:135px; /* 50% larger */
+  left:20px;
 }
 
-.header h1{
+.top-copy{
+  font-size:36px;
   text-align:center;
-  font-size:34px;
-  color:#3b342c;
+  color:var(--ink);
   line-height:1.2;
 }
 
 /* HERO */
-
 .hero{
-  position:relative;
   background:
-    linear-gradient(var(--hero-dark),var(--hero-dark)),
+    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
     url("assets/banner.jpg") center/cover no-repeat;
-  min-height:600px;
-  padding:60px 60px 40px 60px;
-  display:flex;
-  flex-direction:column;
-  justify-content:flex-start;
-  align-items:center;
+  padding:60px 40px 40px;
 }
 
-.hero-text{
+.hero-grid{
+  display:grid;
+  grid-template-columns:1fr 380px;
+  gap:40px;
+  min-height:520px;
+}
+
+.hero-left{
   text-align:center;
+  color:#fff;
+}
+
+.hero-h1{
+  font-size:64px;
+  margin:0 0 10px;
+}
+
+.genres{
+  font-size:20px;
+  margin-bottom:25px;
+}
+
+.btn-primary{
+  display:inline-block;
+  padding:18px 26px;
+  background:linear-gradient(var(--red),var(--red2));
+  color:#fff;
+  font-weight:bold;
+  text-decoration:none;
+  border-radius:50px;
+  letter-spacing:.5px;
+  box-shadow:0 15px 40px rgba(179,22,27,.4);
+}
+
+.btn-primary:hover{filter:brightness(1.05)}
+
+.subline{
+  margin-top:20px;
+  font-size:20px;
+}
+
+.arrow{
+  font-size:28px;
   margin-top:10px;
 }
 
-.hero-text h2{
-  font-size:62px;
-  color:#f5e6c8;
-  text-shadow:0 6px 18px rgba(0,0,0,.7);
-}
-
-.hero-text p{
-  font-size:22px;
-  color:#f1e7d4;
-  margin-top:6px;
-  letter-spacing:1px;
-}
-
-.cta-btn{
-  margin-top:22px;
-  background:linear-gradient(var(--red),var(--red-dark));
-  padding:18px 36px;
-  border-radius:999px;
-  color:#fff;
-  text-decoration:none;
-  font-weight:bold;
-  letter-spacing:1px;
-  box-shadow:0 20px 40px rgba(0,0,0,.5);
-  display:inline-block;
-}
-
-.cta-sub{
-  margin-top:16px;
-  color:#f3e7d4;
-  font-size:18px;
-}
-
-.down-arrow{
-  font-size:28px;
-  margin-top:6px;
-  color:#f3e7d4;
-}
-
-/* FORM */
-
-.form-box{
-  position:absolute;
-  right:50px;
-  bottom:50px;
-  width:360px;
-  background:rgba(30,20,15,.75);
-  backdrop-filter:blur(6px);
+/* FORM CARD */
+.card{
+  align-self:end;
+  background:rgba(20,20,22,.75);
   border-radius:18px;
-  padding:20px;
-  color:#f1e6d5;
-  box-shadow:0 25px 60px rgba(0,0,0,.7);
-}
-
-.form-box h3{
-  font-size:28px;
-  margin-bottom:14px;
-}
-
-.form-viewport{
-  height:270px;
-  overflow:hidden;
-  border-radius:12px;
+  padding:15px;
+  backdrop-filter:blur(8px);
+  box-shadow:0 20px 60px rgba(0,0,0,.7);
 }
 
 .airtable-embed{
   width:100%;
-  height:420px;
-  border:0;
-  transform:scale(.83);
-  transform-origin:top left;
-  margin-top:-70px; /* hides PTBC header */
-}
-
-.form-note{
-  margin-top:10px;
-  font-size:14px;
-  opacity:.85;
+  height:260px; /* fits First, Last, Email, Submit */
+  border:none;
 }
 
 /* FOOTER */
-
-.footer{
-  padding:30px;
+.bottom{
   text-align:center;
+  padding:30px;
   background:var(--paper);
-  color:#3b342c;
+  color:var(--ink);
 }
 
-.footer p{
+.quote{
+  font-size:22px;
   font-style:italic;
-  font-size:20px;
-}
-
-.social{
-  margin-top:14px;
-  font-weight:bold;
-  letter-spacing:1px;
+  margin-bottom:15px;
 }
 
 .icons{
-  margin-top:14px;
   display:flex;
   justify-content:center;
-  gap:16px;
+  gap:18px;
 }
 
-.icons a{
-  width:44px;
-  height:44px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+.icon-btn{
+  width:50px;
+  height:50px;
   border-radius:12px;
+  display:grid;
+  place-items:center;
   text-decoration:none;
-  color:white;
-  font-weight:bold;
-  font-size:20px;
 }
 
-.instagram{ background:#E1306C; }
-.facebook{ background:#1877F2; }
+.instagram{
+  background:#e1306c;
+}
+
+.facebook{
+  background:#1877f2;
+}
+
+.icon{
+  width:24px;
+  height:24px;
+  fill:#fff;
+}
 
 /* MOBILE */
-
 @media(max-width:900px){
-
-  .form-box{
-    position:relative;
-    right:auto;
-    bottom:auto;
-    margin-top:40px;
-    width:100%;
-    max-width:420px;
+  .hero-grid{
+    grid-template-columns:1fr;
   }
 
-  .hero{
-    padding:40px 20px 60px 20px;
+  .card{
+    margin-top:30px;
   }
 
-  .hero-text h2{
+  .hero-h1{
     font-size:46px;
   }
 }
@@ -226,48 +185,59 @@ body{
 
 <body>
 
-<div class="container">
+<div class="wrap">
 
-  <div class="header">
-    <img class="logo" src="assets/logo.png" alt="Logo">
-    <h1>Free books. Support authors.<br>Fuel your next binge.</h1>
+<header class="top-inner">
+  <img src="assets/logo.png" class="logo" alt="PTBC logo">
+  <div class="top-copy">
+    Free books. Support authors.<br>
+    Fuel your next binge.
   </div>
+</header>
 
-  <div class="hero">
+<section class="hero">
+  <div class="hero-grid">
 
-    <div class="hero-text">
-      <h2>Get Free Books</h2>
-      <p>Mystery ★ Thriller ★ Paranormal</p>
+    <div class="hero-left">
+      <h1 class="hero-h1">Get Free Books</h1>
+      <div class="genres">Mystery ★ Thriller ★ Paranormal</div>
 
-      <a class="cta-btn" href="#">TAKE ME TO THIS MONTH'S FREEBIES →</a>
-      <div class="cta-sub">Join the club for other free offers.</div>
-      <div class="down-arrow">↓</div>
+      <a class="btn-primary" href="#">TAKE ME TO THIS MONTH'S FREEBIES →</a>
+
+      <div class="subline">Join the club for other free offers</div>
+      <div class="arrow">↓</div>
     </div>
 
-    <div class="form-box">
-      <h3>Join the mailing list</h3>
-
-      <div class="form-viewport">
-        <iframe class="airtable-embed"
-          src="https://airtable.com/embed/apprQvd2jQf2hjdeK/shrbjWRI6bzsTaFVz">
-        </iframe>
-      </div>
-
-      <div class="form-note">No spam. Leave anytime.</div>
+    <div class="card">
+      <iframe 
+        class="airtable-embed" 
+        src="https://airtable.com/embed/apprQvd2jQf2hjdeK/shrbjWRI6bzsTaFVz"
+        frameborder="0">
+      </iframe>
     </div>
 
   </div>
+</section>
 
-  <div class="footer">
-    <p>“Remember, your reviews are the only applause writers ever get.”</p>
-
-    <div class="social">CLICK ICON TO FOLLOW FOR WEEKLY DEALS:</div>
-
-    <div class="icons">
-      <a class="instagram" href="#">IG</a>
-      <a class="facebook" href="#">f</a>
-    </div>
+<footer class="bottom">
+  <div class="quote">
+    “Remember, your reviews are the only applause writers ever get.”
   </div>
+
+  <div class="icons">
+    <a href="#" class="icon-btn instagram">
+      <svg class="icon" viewBox="0 0 24 24">
+        <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5z"/>
+      </svg>
+    </a>
+
+    <a href="#" class="icon-btn facebook">
+      <svg class="icon" viewBox="0 0 24 24">
+        <path d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.6c0-2.5 1.5-3.9 3.8-3.9v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12H17l-.4 3h-2.6v7A10 10 0 0 0 22 12z"/>
+      </svg>
+    </a>
+  </div>
+</footer>
 
 </div>
 
